--- a/package.json
+++ b/package.json
@@ -3,17 +3,24 @@
   "version": "0.0.0",
   "description": "ERROR: No README.md file found!",
   "main": "grunt.js",
-  "dependencies": {
-    "express": "~3.1.0",
-    "grunt-requirejs": "~0.3.1",
-    "grunt-handlebars": "~0.0.6",
-    "grunt-csso": "~0.3.0"
-  },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cdata/mineral.git"
+  },
   "author": "",
-  "license": "BSD"
+  "license": "BSD",
+  "gitHead": "72ab82d163913e3bc35d06cfcf233776296c8db6",
+  "dependencies": {
+    "lodash": "~1.0.0-rc.3",
+    "express": "~3.1.0",
+    "grunt-handlebars": "~0.0.6",
+    "q": "~0.8.12",
+    "minecraft-protocol": "~0.7.1",
+    "grunt-csso": "~0.3.0",
+    "grunt-requirejs": "~0.3.1"
+  },
+  "devDependencies": {}
 }
